--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!--Set the title for the page-->
-    <title>Github Pages Tutorial</title>
+    <title>Ponnai</title>
 
     <!-- The nav bar remains the same for every page, so by defining it in only one file, we only
      need to edit it in one place when we make changes to it. -->
@@ -42,7 +42,7 @@
 
         <!--h1 stands for heading 1, the largest kind of header. You can add smaller headings with h2, h3 etc.-->
         <!--Note: we need to both open (<h1>) and close (</h1>) all of the tags that we use.-->
-﻿       <h1>Welcome to the Github Pages Tutorial</h1>
+﻿       <h1>Ponnai <br>பொன்நாய்</h1>
 
         <!--p stands for paragraph, the main text building blocks we're working with.-->
         <p>Hi there! This is a tutorial on how to set up a simple static website with
