--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">Github Pages Tutorial</a>
+    <a class="navbar-brand" href="index.html">Ponnai பொன்நாய்</a>
 
     <!-- To make our navbar mobile-friendly, we make it collapsable -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -12,23 +12,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="setup.html">Setup<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="setup.html">Teaching<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="editing.html">Editing</a>
+            <a class="nav-link" href="editing.html">Visual Art</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="html_basics.html">HTML Basics</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="links.html">Links and Images</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="adding_removing.html">Adding and Removing Pages</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="styling.html">CSS Styling</a>
+            <a class="nav-link" href="html_basics.html">About/Contact</a>
           </li>
         </ul>
     </div>
