--- a/header.html
+++ b/header.html
@@ -12,13 +12,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="setup.html">Teaching<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="teaching.html">Teaching<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="editing.html">Visual Art</a>
+            <a class="nav-link" href="art.html">Visual Art</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="html_basics.html">About/Contact</a>
+            <a class="nav-link" href="about.html">About/Contact</a>
           </li>
         </ul>
     </div>
