--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <link href="css/main.css" rel="stylesheet">
 
     <!--Set the title for the page-->
-    <title>HTML Basics</title>
+    <title>About/Contact</title>
 
 </head>
 
