--- a/teaching.html
+++ b/teaching.html
@@ -32,11 +32,11 @@
 <body>
 
     <!--This element is a placeholder for the header with the navbar, which we load above-->
-    <div id="header"></div>
+    <div id="header">Teaching</div>
 
     <div class="column">
 
-    <h3>Teaching of Mughal Floral Art - In Collaboration with Jaipur Rugs Foundation (2023)</h3>
+    <h3><u><b>Teaching of Mughal Floral Art - In Collaboration with Jaipur Rugs Foundation (2023)</b></u></h3>
         
     </div>
 
