--- a/teaching.html
+++ b/teaching.html
@@ -36,7 +36,7 @@
 
     <div class="column">
 
-    <h3><u><b>Teaching of Mughal Floral Art - In Collaboration with Jaipur Rugs Foundation (2023)</b></u></h3>
+    <h3><u><b>Teaching of Mughal Floral Art</b> - In Collaboration with Jaipur Rugs Foundation (2023)</u></h3>
         
     </div>
 
