--- a/teaching.html
+++ b/teaching.html
@@ -16,7 +16,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!--Set the title for the page-->
-    <title>Github Pages Tutorial</title>
+    <title>Teaching</title>
 
     <!-- The nav bar remains the same for every page, so by defining it in only one file, we only
      need to edit it in one place when we make changes to it. -->
@@ -36,7 +36,7 @@
 
     <div class="column">
 
-    <h3><b>Teaching of Mughal Floral Art</b> — In Collaboration with Jaipur Rugs Foundation</h3>
+    <h3><b><u>Teaching of Mughal Floral Art</b> — In Collaboration with Jaipur Rugs Foundation</u></h3>
     <h4>Jaipur, Rajasthan, India — 2023</h4>   
     
     
