--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
     <!--This element is a placeholder for the header with the navbar, which we load above-->
-    <div id="header"></div>
+    <div id="header">Ponnai <br>பொன்நாய்</div>
 
     <!--a div (for division) defines a section of the page. By giving the div below (which contains-->
     <!--all of the text the class "column", we can control, for example, how large the borders to the-->
@@ -42,7 +42,7 @@
 
         <!--h1 stands for heading 1, the largest kind of header. You can add smaller headings with h2, h3 etc.-->
         <!--Note: we need to both open (<h1>) and close (</h1>) all of the tags that we use.-->
-﻿       <h1>Ponnai <br>பொன்நாய்</h1>
+﻿       
 
 
     </div>
