--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 </head>
 
+    <div id="header"></div>
 
 <!--We define the elements that we actually want to display in the body element-->
 <body>
