--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
     <p>I am a visual artist who is self-taught and also formally educated at Bennington College in Vermont in the United States. 
         I have a visual art practice which is in the field of conceptual art and when time allows I also teach visual art in the fields of drawing and painting.</p>
-    <p>You can contact me on:</p> 
+    <p>You can contact me at:</p> 
     <p>ponnai.net(at)gmail.com</p>   
     </div>
 
