--- a/teaching.html
+++ b/teaching.html
@@ -45,7 +45,7 @@ India to produce high quality rugs. I taught drawing and painting to these artis
 </p>
     <p style="text-align: justify;">A series of workshops in drawing and painting were conducted to over 70 participants which consisted of drawing and painting workshops which focused on their technical ability and also gave the artisans a thematic framework for creative expression. The entire program was done within a span of four months and a select few artisans went on to make final paintings on canvases. The artisans who made final works on canvas got the opportunity to showcase their work in a final 
         exhibition which was held at Jawahar Kala Kendra in Jaipur.</p>
-
+<p>Photographs of my students and their final works on canvas are below:</p>
 <div class="myGallery">
   <img src="images/1.jpg" />
   <img src="images/2.jpg" />
