--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         United States. I have a visual art practice which is in the field of conceptual art and when time allows I also 
         teach visual art in the fields of drawing and painting.</p>
     <p>You can contact me at:</p> 
-    <p>ponnai.net(at)gmail.com</p>   
+    <p>ponnai.net@gmail.com</p>   
     </div>
 
 </body>
