--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 <!--styling) and javascript files.-->
 <head>
 
-    <meta name="author" content="Stephan Risi">
-    <meta charset="utf-8">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+    <meta name="author" content="Ineshke Unambuwe">
+    <meta name="description" content="ponnai.net - This is a visual art project by Ineshke Unambuwe.">
+    <meta name="keywords" content="ponnai, ponnai.net, Ineshke, Unambuwe, Ineshke Unambuwe, art, visual art, conceptual art" />
+    <meta name="google-site-verification" content="OWRwdtEDI7kC-bfeDOfeHNoO-T10d5h_WS3byc9OlEE" />	
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Load JQuery and Bootstrap. They are javascript library that handle the layouting for us.-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
