--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
     <!-- Import the css file, which defines how our website looks -->
     <link href="css/main.css" rel="stylesheet">
-
+    <script src="script.js" defer></script>
     <!--Set the title for the page-->
     <title>About/Contact</title>
 
