--- a/teaching.html
+++ b/teaching.html
@@ -24,7 +24,7 @@
 
     <!-- Import the css file, which defines how our website looks -->
     <link href="css/main.css" rel="stylesheet">
-
+    <script src="script.js" defer></script>
 </head>
 
 
