--- a/teaching.html
+++ b/teaching.html
@@ -27,6 +27,13 @@
     <script src="script.js" defer></script>
 </head>
 
+    <div id="lightbox" class="lightbox">
+  <span class="close">&times;</span>
+  <img id="lightbox-image" class="lightbox-content" />
+  <span class="prev">&#10094;</span>
+  <span class="next">&#10095;</span>
+  </div>
+
 
 <!--We define the elements that we actually want to display in the body element-->
 <body>
@@ -48,21 +55,21 @@ India to produce high quality rugs. I taught drawing and painting to these artis
         exhibition which was held at Jawahar Kala Kendra in Jaipur.</p>
 <p>Photographs of my students and their final works on canvas are below:</p>
 <div class="myGallery">
-  <img src="images/1.jpg" />
-  <img src="images/2.jpg" />
-  <img src="images/3.jpg" />
-  <img src="images/4.jpg" />
-  <img src="images/5.jpg" />
-  <img src="images/6.jpg" />
-  <img src="images/7.jpg" />
-  <img src="images/8.jpg" />
-  <img src="images/9.jpg" />
-  <img src="images/10.jpg" />
-  <img src="images/11.jpg" />
-  <img src="images/12.jpg" />
-  <img src="images/13.jpg" />
-  <img src="images/14.jpg" />
-  <img src="images/15.jpg" />
+ <img src="images/1.jpg" alt="Image 1" class="lightbox-img">
+ <img src="images/2.jpg" alt="Image 2" class="lightbox-img">
+<img src="images/3.jpg" alt="Image 3" class="lightbox-img">
+<img src="images/4.jpg" alt="Image 4" class="lightbox-img">
+<img src="images/5.jpg" alt="Image 5" class="lightbox-img">
+<img src="images/6.jpg" alt="Image 6" class="lightbox-img">
+<img src="images/7.jpg" alt="Image 7" class="lightbox-img">
+ <img src="images/8.jpg" alt="Image 8" class="lightbox-img">
+     <img src="images/9.jpg" alt="Image 9" class="lightbox-img">
+     <img src="images/10.jpg" alt="Image 10" class="lightbox-img">
+     <img src="images/11.jpg" alt="Image 11" class="lightbox-img">
+     <img src="images/12.jpg" alt="Image 12" class="lightbox-img">
+     <img src="images/13.jpg" alt="Image 13" class="lightbox-img">
+     <img src="images/14.jpg" alt="Image 14" class="lightbox-img">
+     <img src="images/15.jpg" alt="Image 15" class="lightbox-img">
 </div>
 
     
