--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	The conceptual frameworks that guide both my teaching and my artistic practice have been developed entirely by myself. Under my guidance, the work produced through teaching reflects the creativity and 
 	efforts of my students while the work presented as part of my own visual arts practice is conceptualized and created solely by myself. </p>
 	
-	<p style="margin-top: 3rem; text-indent: 0em; font-size: 1.8rem; text-align: justify;">This website was made by Ineshke Unambuwe and was last modified on December 23rd, 2025.</p>
+	<p style="margin-top: 3rem; text-indent: 0em; text-align: justify;">This website was made by Ineshke Unambuwe and was last modified on December 23rd, 2025.</p>
 	
 	
      
