--- a/digital.html
+++ b/digital.html
@@ -92,9 +92,7 @@
 	<h3 style="text-align:center; margin-top: 3rem; margin-bottom: 4rem;"><b><i>Proposal for Conceptual Transformations of the Traditional Kolam</i></b></h3>
 	
 	<p>Kolam is a traditional visual practice found within Dravida communities such as Tamil, 
-	Telugu and Malayali. Since some Dravida communities are located outside their native regions such as 
-	Tamil communities, the visual practice of Kolam can be found from South India, Sri Lanka to other 
-	regions such as Singapore and Malaysia. Although known as Kolam by Dravidian communities, this visual 
+	Telugu and Malayali. Because some Dravida communities, such as Tamil communities, live outside their native regions, the practice of Kolam extends beyond South India and Sri Lanka to places such as Singapore and Malaysia. Although known as Kolam by Dravidian communities, this visual 
 	practice also takes place within North Indian communities practiced as Rangoli. I have taken the 
 	practice of Kolam and implemented it as practice of conceptual art by changing the logic and rules 
 	behind the creation of the Kolam.</p>
