--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 	
     <p></p>
     <h1>Ponnai <br>பொன்நாய்</h1>
-    <p></p>
-    <p></p>
+    <h3 style="margin-bottom: 5rem;"><i>(GOLDEN DOG)</i></h3>
    
 	<div class="image">
     <img src="images/other/dog_with_pipe.jpg" alt="Dog with Pipe in Mouth">
